// Copyright 2022 European netID Foundation (https://enid.foundation)
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
// http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

"net_id_service_title" = "netID Service";
"initialize_button_title" = "Service initialisieren";
"authorize_button_title" = "Authorisieren";
"user_info_button_title" = "UserInfo laden";
"end_session_button_title" = "Session beenden";
"network_error_alert_title" = "Netzwerkfehler";
"network_error_alert_description" = "Bitte stelle sicher, dass eine Netzwerkverbindung besteht.";
"network_error_alert_action" = "Verstanden";
"permission_management_title" = "Permission Management";
"update_permission_button_title" = "Permission aktualisieren";
"fetch_permissions_button_title" = "Permissions laden";
"log_text_title" = "Logs:";
"choose_auth_flow_title" = "Bitte wähle Deinen Authorisierungsprozess.";
