// Copyright 2022 European netID Foundation (https://enid.foundation)
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
// http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

"authorization_view_private_settings" = "Privatsphäre-Einstellungen sicher speichern mit netID";
"authorization_view_legal_info_part_one" = "Indem Sie Ihre Einwilligung erteilen, geben Sie [Formulierung Partnername] die Erlaubnis, Sie bei der Nutzung unserer Angebote, insbesondere dieser App, als netID Nutzer:in zu identifizieren und Ihren netID Identifier für [Formulierung Verwendung/Zwecke] zu verwenden. Durch Nutzung von netID können Ihnen Einwilligungsdialoge bei der Nutzung unserer Angebote, insbesondere dieser App, dann seltener angezeigt werden.";
"authorization_view_legal_info_select" = "(anderen netID Account Anbieter hier auswählen)";
"authorization_view_legal_info_part_two" = " Sie können Ihre Einwilligung jederzeit über Ihr netID Privacy Center bei %@ einsehen, widerrufen und verwalten.";
"authorization_view_agree_and_continue_with_net_id" = "Zustimmen mit netID";
"authorization_view_close" = "Schließen";
"authorization_view_use_app" = "%@ App verwenden";
"authorization_login_view_title" = "Login mit netID";
"authorization_login_view_email_login" = "Login mit Ihrer E-Mail App";
"authorization_login_view_continue_with" = "Login mit %@";
"authorization_login_view_close" = "Weitere Anmeldeoptionen";
"authorization_login_ap" = "Login mit netID von %@";
"authorization_permission_ap" = "Zustimmen mit netID von %@";
"authorization_view_net_id" = "netID";
